--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
     <style>
-        .lexend-font{
+        .lexend-font {
             font-family: "Lexend", sans-serif;
             font-optical-sizing: auto;
-            font-weight: 400;
+            font-weight: 300;
             font-style: normal;
         }
     </style>
@@ -41,10 +41,10 @@
 </head>
 
 <body class="lexend-font">
-    <header class="bg-secondary pt-6 pb-11">
+    <header class="bg-secondary pt-6 pb-14">
         <nav class="container mx-auto px-5 flex justify-between items-center">
-            <div class="text-xl font-semibold text-dark">Blog</div>
-            <div class="md:flex gap-2 justify-center items-center hidden md:block">
+            <div class="text-xl font-semibold text-dark btn bg-primary">Blog</div>
+            <div class="md:flex gap-2 justify-center items-center hidden">
                 <img src="./assets/logo.png" alt="">
                 <h3 class="text-xl font-semibold text-dark">Donate Bangladesh</h3>
             </div>
@@ -57,6 +57,42 @@
             </div>
         </nav>
     </header>
+    <main class="container mx-auto p-5">
+        <!-- button create -->
+        <div class="mt-10 flex justify-center items-center gap-8">
+            <button class="btn">Donation</button>
+            <button class="btn">History</button>
+        </div>
+
+        <!-- donation card section start -->
+        <div class="hero border border-gray-100 rounded-2xl p-8 my-10">
+            <div class="hero-content gap-8 flex-col lg:flex-row">
+                <img src="./assets/noakhali.png"
+                    class=" rounded-lg " />
+                <div>
+                    <div class="flex items-center gap-2 font-semibold text-dark2">
+                        <img src="./assets/coin.png" alt="">
+                        <p>
+                            <span>0</span>
+                            <span>BDT</span>
+                        </p>
+                    </div>
+                    <h1 class="text-xl font-bold text-dark">Donate for Flood at Noakhali, Bangladesh</h1>
+                    <p class="py-6 text-dark2">
+                        The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster. Every contribution, big or small, makes  difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.
+                    </p>
+                    <div class="py-6">
+                         <input  type="text" class="w-full input" placeholder="Username" />
+                    </div>
+                    <button class="btn bg-primary w-full text-center">Donate Now</button>
+                </div>
+            </div>
+        </div>
+        <!-- donation card section end -->
+
+
+
+    </main>
 </body>
 
 </html>
