--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="flex gap-2 justify-center items-center">
                 <img src="./assets/coin.png" alt="">
                 <h3 class="text-xl font-semibold text-dark2">
-                    <span>6000</span>
+                    <span id="total-balance">6000</span>
                     <span>BDT</span>
                 </h3>
             </div>
@@ -77,7 +77,7 @@
                         <div class="flex items-center gap-2 font-semibold text-dark2">
                             <img src="./assets/coin.png" alt="">
                             <p>
-                                <span>0</span>
+                                <span id="donate-balance">0</span>
                                 <span>BDT</span>
                             </p>
                         </div>
@@ -89,9 +89,11 @@
                             efforts and making a positive impact on the lives of those in need.
                         </p>
                         <div class="my-6 border rounded-xl">
-                            <input type="text" class="w-full input" placeholder="Username" />
+                            <input id="input-balance" type="text" class="w-full input" placeholder="Username" />
                         </div>
-                        <button class="btn bg-primary w-full text-center">Donate Now</button>
+                        <button id="donat-btn" class="btn bg-primary w-full text-center">
+                            Donate Now
+                        </button>
                     </div>
                 </div>
             </div>
@@ -159,14 +161,32 @@
             </div>
         </section>
         <!-- History section end -->
-         
+
+        <!-- Open the modal using ID.showModal() method -->
+        <!-- <button class="btn" onclick="my_modal_1.showModal()">open modal</button> -->
+        <dialog id="my_modal_1" class="modal">
+            <div class="modal-box flex flex-col justify-center items-center">
+                <h3 class="text-4xl font-bold">Congrats!</h3>
+                <img class="py-4" src="./assets/coin.png" alt="">
+                <p class="py-4">You Have Donated for Humankind</p>
+                <h3 class="text-3xl font-bold">Successfully</h3>
+                <div class="modal-action">
+                    <form method="dialog">
+                        <!-- if there is a button in form, it will close the modal -->
+                        <button class="btn">Close confirmation</button>
+                    </form>
+                </div>
+            </div>
+        </dialog>
+
     </main>
     <footer class="bg-secondary h-36">
 
     </footer>
 
     <!-- link javaScript  -->
-     <script src="./js/main.js"></script>
+     <script src="./js/utility.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
