--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <div class="my-6 border rounded-xl">
                             <input id="input-balance" type="text" class="w-full input" placeholder="Username" />
                         </div>
-                        <button id="donat-btn" class="btn bg-primary w-full text-center">
+                        <button id="donate-now-btn1" class="btn bg-primary w-full text-center">
                             Donate Now
                         </button>
                     </div>
@@ -154,7 +154,7 @@
 
         <!-- History section start  -->
         <section id="history-section" class="hidden">
-            <div class="flex flex-col justify-center items-center my-10 h-80">
+            <div id="history-add" class="flex flex-col justify-center items-center my-10 h-80">
                 <div>
                     <h1 class="text-5xl text-red-500 font-bold">Now History Not available</h1>
                 </div>
@@ -185,7 +185,6 @@
     </footer>
 
     <!-- link javaScript  -->
-     <script src="./js/utility.js"></script>
     <script src="./js/main.js"></script>
 </body>
 
