--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 </head>
 
 <body class="lexend-font">
-    <header class="bg-secondary pt-6 pb-14">
-        <nav class="container mx-auto px-5 flex justify-between items-center">
+    <header class="navbar bg-secondary pt-6 pb-14 sticky top-0 z-10">
+        <nav class="container mx-auto px-5 flex justify-between items-center ">
             <div class="text-xl font-semibold text-dark btn bg-primary">
                 <a href="./blog.html">Blog</a>
             </div>
@@ -59,7 +59,7 @@
             </div>
         </nav>
     </header>
-    <main class="container mx-auto p-5">
+    <main class="container mx-auto p-5 ">
         <!-- button create -->
         <section>
             <div class="mt-10 flex justify-center items-center gap-8">
@@ -81,7 +81,7 @@
                                 <span>BDT</span>
                             </p>
                         </div>
-                        <h1 class="text-xl font-bold text-dark">Donate for Flood at Noakhali, Bangladesh</h1>
+                        <h1 id="title-1" class="text-xl font-bold text-dark">Donate for Flood at Noakhali, Bangladesh</h1>
                         <p class="py-6 text-dark2">
                             The recent floods in Noakhali have caused significant damage to homes infrastructure. Your
                             donation will help provide essential supplies and to those affected by this disaster. Every
@@ -154,10 +154,12 @@
 
         <!-- History section start  -->
         <section id="history-section" class="hidden">
-            <div id="history-add" class="flex flex-col justify-center items-center my-10 h-80">
+            <div id="history-add" class="flex flex-col my-10 ">
                 <div>
                     <h1 class="text-5xl text-red-500 font-bold">Now History Not available</h1>
                 </div>
+                
+
             </div>
         </section>
         <!-- History section end -->
