added all functualty

--- a/blog.html
+++ b/blog.html
@@ -68,28 +68,49 @@
             </h1>
             <div class="collapse collapse-arrow border rounded-none p-5">
                 <input type="radio" name="my-accordion-2" checked="checked" />
-                <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+                <div class="collapse-title text-xl font-medium">A.What is the Document Object Model (DOM)?</div>
                 <div class="collapse-content">
-                  <p>hello</p>
+                    <p>The Document Object Model (MOM) is a programming interface that respresents the structurre of an
+                        HTML Documnet as a tree of object.</p>
                 </div>
-              </div>
-              <div class="collapse collapse-arrow border rounded-none p-5">
+            </div>
+            <div class="collapse collapse-arrow border rounded-none p-5">
                 <input type="radio" name="my-accordion-2" />
-                <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+                <div class="collapse-title text-xl font-medium">B. How do you select an element from the DOM?</div>
                 <div class="collapse-content">
-                  <p>hello</p>
+                    <ul>
+                        <li>getElementById("id")</li>
+                        <li>getElementsByClass("class")</li>
+                        <li>getElementsByTagName("tag")</li>
+                        <li>querySelector("selector")</li>
+                        <li>querySelectorAll("selector")</li>
+                    </ul>
                 </div>
-              </div>
-              <div class="collapse collapse-arrow border rounded-none p-5">
+            </div>
+            <div class="collapse collapse-arrow border rounded-none p-5">
                 <input type="radio" name="my-accordion-2" />
-                <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+                <div class="collapse-title text-xl font-medium">C. What is event delegation in the context of the DOM,
+                    and why is it useful?</div>
                 <div class="collapse-content">
-                  <p>hello</p>
+                    <p>Event delegation is a technique where a single event listener is added to a parent gelement,
+                        allaowing it to handle events from child elements as they bubble up</p>
                 </div>
-              </div>
+            </div>
+            <div class="collapse collapse-arrow border rounded-none p-5">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">D. How do you manipulate an element's attributes and
+                    styles using the DOM?</div>
+                <div class="collapse-content">
+                    <ul>
+                        <li>Element.SetAttribute('attr', 'value')</li>
+                        <li>Element.getAttribute('attr')</li>
+
+                    </ul>
+                </div>
+            </div>
         </section>
-        
-       
+
+
 
     </main>
 </body>
