--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <div class="my-6 border rounded-xl">
                             <input id="input-balance" type="text" class="w-full input" placeholder="Username" />
                         </div>
-                        <button id="donate-now-btn1" class="btn bg-primary w-full text-center">
+                        <button  id="donate-now-btn1" class="btn bg-primary w-full text-center">
                             Donate Now
                         </button>
                     </div>
@@ -105,11 +105,11 @@
                         <div class="flex items-center gap-2 font-semibold text-dark2">
                             <img src="./assets/coin.png" alt="">
                             <p>
-                                <span>600</span>
+                                <span id="donate-balance2">600</span>
                                 <span>BDT</span>
                             </p>
                         </div>
-                        <h1 class="text-xl font-bold text-dark">Donate for Flood Relief in Feni,Bangladesh</h1>
+                        <h1 id="title-2" class="text-xl font-bold text-dark">Donate for Flood Relief in Feni,Bangladesh</h1>
                         <p class="py-6 text-dark2">
                             The recent floods in Noakhali have caused significant damage to homes infrastructure. Your
                             donation will help provide essential supplies and to those affected by this disaster. Every
@@ -117,9 +117,9 @@
                             efforts and making a positive impact on the lives of those in need.
                         </p>
                         <div class="my-6 border rounded-xl">
-                            <input type="text" class="w-full input" placeholder="Username" />
+                            <input id="input-balance2" type="text" class="w-full input" placeholder="Username" />
                         </div>
-                        <button class="btn bg-primary w-full text-center">Donate Now</button>
+                        <button id="donate-now-btn2" class="btn bg-primary w-full text-center">Donate Now</button>
                     </div>
                 </div>
             </div>
@@ -131,11 +131,11 @@
                         <div class="flex items-center gap-2 font-semibold text-dark2">
                             <img src="./assets/coin.png" alt="">
                             <p>
-                                <span>2400</span>
+                                <span id="donate-balance3">2400</span>
                                 <span>BDT</span>
                             </p>
                         </div>
-                        <h1 class="text-xl font-bold text-dark">Aid for Injured in the Quota Movement</h1>
+                        <h1 id="title-3" class="text-xl font-bold text-dark">Aid for Injured in the Quota Movement</h1>
                         <p class="py-6 text-dark2">
                             The recent floods in Noakhali have caused significant damage to homes infrastructure. Your
                             donation will help provide essential supplies and to those affected by this disaster. Every
@@ -143,9 +143,9 @@
                             efforts and making a positive impact on the lives of those in need.
                         </p>
                         <div class="my-6 border rounded-xl">
-                            <input type="text" class="w-full input" placeholder="Username" />
+                            <input id="input-balance3" type="text" class="w-full input" placeholder="Username" />
                         </div>
-                        <button class="btn bg-primary w-full text-center">Donate Now</button>
+                        <button id="donate-now-btn3" class="btn bg-primary w-full text-center">Donate Now</button>
                     </div>
                 </div>
             </div>
@@ -156,7 +156,7 @@
         <section id="history-section" class="hidden">
             <div id="history-add" class="flex flex-col my-10 ">
                 <div>
-                    <h1 class="text-5xl text-red-500 font-bold">Now History Not available</h1>
+                    <h1 id="history-text" class="text-5xl text-red-500 font-bold">Now History Not available</h1>
                 </div>
                 
 
@@ -182,7 +182,7 @@
         </dialog>
 
     </main>
-    <footer class="bg-secondary h-36">
+    <footer id="footer" class="bg-secondary h-36 mt-96">
 
     </footer>
 
