all jacascript restructure and some problem fixed

--- a/index.html
+++ b/index.html
@@ -182,11 +182,12 @@
         </dialog>
 
     </main>
-    <footer id="footer" class="bg-secondary h-36 mt-96">
+    <footer id="footer" class="bg-secondary h-36">
 
     </footer>
 
     <!-- link javaScript  -->
+     <script src="./js/utility.js"></script>
     <script src="./js/main.js"></script>
 </body>
 
